--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-
+h1 {
+  color: orange;
+}
+	
 </head>
-
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 <body>
-<div style = "background:grey">
+<div id="myDiv">
 <h1>Final project for IT-1000</h1>
 <ul>
   <li>Hi, I’m Gabe a sophmore in college as of writing this</li>
