--- a/finalproject.html
+++ b/finalproject.html
@@ -8,18 +8,7 @@
 
 <body>
 <div style = "background:grey">
-<h1>Final project for IT-1000</h1>
-<ul>
-  <li>Hi, I’m Gabe a sophmore in college as of writing this</li>
-  <li>I’m interested in all things Computers, Gaming, and Coding</li>
-  <li>I’m currently learning IT at the University of Missouri Columbia</li>
-  <li>Feel free to check out some of my other projects</li>
-      <ul>
-	<li><a href="https://github.com/GabeS1/GabeS1.github.io/blob/main/CylinderVolumeCalc.html">Here is a code I wrote to find the Volume of a Cyliner</a></li>
-	<li><a href="https://github.com/GabeS1/GabeS1/blob/main/GabeSisk3bAsset%201.png">Here is a picture I made in my design class</a></li>
-	<li><a href="https://www.bing.com/images/search?view=detailV2&ccid=N0MyLXys&id=B28C5A5E47731F70EB89C7E06DFCD3C4031D0BB8&thid=OIP.N0MyLXysFySFgxA7sPhgPQHaHa&mediaurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.3743322d7cac17248583103bb0f8603d%3frik%3duAsdA8TT%252fG3gxw%26riu%3dhttp%253a%252f%252forig10.deviantart.net%252f1453%252ff%252f2015%252f303%252f0%252f8%252fblack_desert_by_ru_devlin-d9evffh.png%26ehk%3d%252bbpHT%252fbE%252fvsoJpQHrtb2%252fvLBJJt0B%252fwmf%252frdBjG6Vu0%253d%26risl%3d%26pid%3dImgRaw%26r%3d0&exph=512&expw=512&q=Black+Desert+Online+Icon&simid=608007858485018276&FORM=IRPRST&ck=D93EC91B832FDE76A86DA35723E033FC&selectedIndex=8">Here is a picture of the current game I am playing.</a></li>
-      </ul>
-</ul>
+<p>Besides what you already read in my ReadME file this will be a bit more in depth. I grew up about 3 hours from when I am currently attending college in a small farm town. I grew up doing all sorts of farm work but also very interested in computers and how they work whether it be my first gaming pc, my phone, laptops, gaming consols, etc. I originally started out pursing a degree in plant science, which yes I know it is a complete opposite of Information Technology, however I just recently switched to pursue my degree in IT which I absolutely love. What sparked my interest was my curiosity to computers from ever since I was a kid and used to play on an old Playstation 2 with my sister which slowly worked its way up to now where I have my current collection of technology. Technology is truly amazing and I can't wait to see where this degree and the world takes me.</p>
 </div>
 </body>
 
