--- a/aboutmyself.html
+++ b/aboutmyself.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Final Project</title>
 
 </head>
-
+  <h2>About Me</h2>
 <body>
 <div style = "background:grey">
 <p>Besides what you already read in my ReadME file this will be a bit more in depth. I grew up about 3 hours from when I am currently attending college in a small farm town. I grew up doing all sorts of farm work but also very interested in computers and how they work whether it be my first gaming pc, my phone, laptops, gaming consols, etc. I originally started out pursing a degree in plant science, which yes I know it is a complete opposite of Information Technology, however I just recently switched to pursue my degree in IT which I absolutely love. What sparked my interest was my curiosity to computers from ever since I was a kid and used to play on an old Playstation 2 with my sister which slowly worked its way up to now where I have my current collection of technology. Technology is truly amazing and I can't wait to see where this degree and the world takes me.</p>
