--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>Final project for IT-1000</h1>
 <ul>
   <li>Hi, I’m Gabe a sophmore in college as of writing this</li>
-  <li>I’m interested in all things Computers, Gaming, and Coding</li>
+	<li>I’m interested in all things <i>Computers, Gaming, and Coding</i></li>
   <li>I’m currently learning IT at the University of Missouri Columbia</li>
   <li>Feel free to check out some of my other projects</li>
       <ul>
