--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <ul>
   <li>Hi, I’m Gabe a sophmore in college as of writing this</li>
 	<li>I’m interested in all things <em>Computers, Gaming, and Coding</em></li>
-  <li>I’m currently learning IT at the University of Missouri Columbia</li>
+	<li>I’m currently learning IT at the <b>University of Missouri Columbia</b></li>
   <li>Feel free to check out some of my other projects</li>
       <ul>
 	<li><a href="aboutmyself.html">Here is a little bit about myself</a></li>
