--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<style>
+h1 {
+  color: orange;
+}
+</style>
 <link rel="stylesheet" type="text/css" href="mystyle.css">	
 </head>
 <body>
