--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="mystyle.css">
 <style>
+body {
+  background-color: yellow;
+}
 h1 {
   color: orange;
 }
