--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="mystyle.css">
 <style>
 body {
-  background-color: yellow;
+  background-color: goldenrod;
 }
 h1 {
   color: orange;
