--- a/aboutmyself.html
+++ b/aboutmyself.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <style>
 body {
-  background-color: grey blue;
+  background-color: Grey Blue;
 }
-h1 {
+h2 {
   color: Blue;
 }
 </style>	
