--- a/cylindervolume.html
+++ b/cylindervolume.html
@@ -2,12 +2,19 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Final Project</title>
-
+<style>
+body {
+  background-color: olive;
+}
+h2 {
+  color: Brown;
+}
+</style>
 </head>
 
 <body>
-<div style = "background:grey">
+<div id="myDiv">
+	<h2>Python Cylinder Volume Calculations</h2>
 <p>
 	from math import pi
 	<hr class="line1">
